--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,6 @@ extends layout
 
 block content
   h1= title
-  p #{recentFreq}
+  p #{recentFreq}%
+  div(style={opacity : lastData})
+    img(src='/modified-keg.png')
