Minor front-end edits and added comment for next steps in classifySample.py

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,7 +3,7 @@
 	<link rel="icon" type="image/png" href="img/favicon.ico">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Light Bootstrap Dashboard by Creative Tim</title>
+	<title>StreamFi | Dashboard</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -186,7 +186,7 @@
                                 <div class="footer">
                                     <hr>
                                     <div class="stats">
-                                        <i class="fa fa-clock-o"></i> Last measurement: 
+                                        <i class="fa fa-clock-o"></i> Last measurement: now
                                     </div>
                                 </div>
                             </div>
@@ -249,7 +249,7 @@
                 <nav class="pull-left">
                     <ul>
                         <li>
-                            <a href="#">
+                            <a href="/">
                                 Home
                             </a>
                         </li>
@@ -259,7 +259,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="https://www.ece.cmu.edu/~ece549/spring17/team10/website/">
                                 Project Website
                             </a>
                         </li>
@@ -322,43 +322,3 @@
 
         }
     </script>
-
-<!--<head>
-	<title>StreamFi | Home</title>
-	<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/css/index.css">
-	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
-</head>
-
-<body id="background">
-	<div id="left-nav">
-		<ul>
-		  <li><a class="active" href="#"><i class="fa fa-home"></i><br>Home</a></li>
-		  <li><a href="/containers"><i class="fa fa-tint"></i><br>Containers</a></li>
-		  <li><a href="#" onclick="findValues()"><i class="fa fa-bar-chart"></i><br>Statistics</a></li>
-		  <li><a href="#"><i class="fa fa-cog"></i><br>Settings</a></li>
-		  <li><a href="#"><i class="fa fa-sign-out"></i><br>Sign Out</a></li>
-		</ul>
-	</div>
-	<div id="content">
-		<h2>StreamFi Dashboard</h2>
-	</div>
-
-	<script>
-		function findValues() {
-			var myList;
-			$.getJSON('/json/test.json').done(function (data) {
-				myList = data;
-				var jsonData = document.getElementById("content");
-				jsonData.innerHTML += "Container ID = ";
-				jsonData.innerHTML += data.containerID;
-				jsonData.innerHTML += "<br>";
-				jsonData.innerHTML += "Fill Level =";
-				jsonData.innerHTML += data.fillLevel;
-				jsonData.innerHTML += "<br>";
-				console.log(data);
-			});
-		}
-	</script>
-</body>-->
