--- a/views/about-us.handlebars
+++ b/views/about-us.handlebars
@@ -1,11 +1,11 @@
 <head>
-	<meta charset="utf-8" />
-	<link rel="icon" type="image/png" href="img/favicon.ico">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="img/favicon.ico">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>StreamFi | Statistics</title>
+    <title>StreamFi | Sign Out</title>
 
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
 
 
@@ -34,7 +34,7 @@
 <div class="wrapper">
     <div class="sidebar" data-color="blue" data-image="img/sidebar-5.jpg">
 
-    	<div class="sidebar-wrapper">
+        <div class="sidebar-wrapper">
             <div class="logo">
                 <a href="/" class="simple-text">
                     StreamFi
@@ -79,7 +79,7 @@
                     </a>
                 </li>
             </ul>
-    	</div>
+        </div>
     </div>
 
     <div class="main-panel">
@@ -92,7 +92,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Statistics</a>
+                    <a class="navbar-brand" href="#">Containers</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
@@ -149,72 +149,20 @@
 
 
         <div class="content">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card">
-                            <div class="header">
-                                <h4 class="title">Container Statistics</h4>
-                                <p class="category">Last Measurement</p>
-                            </div>
-                            <div class="content">
-                            	<div id="json-data"></div>
-                                <div class="footer">
-                                    <hr>
-                                    <div class="stats">
-                                        <i class="fa fa-clock-o"></i>Last measurement: <div id="current-time"></div> 
-                                    </div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="card">
+                                <div class="header">
+                                    <h4 class="title" style="text-align: center;">About Us</h4>
+                                </div>
+                                <div class="content">
+                                    <p> StreamFi is a liquid level sensor that is attached to the outside of any container holding liquid. StreamFi determines if the fill level is close to empty or full and notifies the sensor owner. The sensor and notifier will be self-contained and self-powered. Ideal applications of StreamFi are water containers at sports events or restaurants, kegs at stadiums or other large events such as music festivals, brake or wiper fluid in cars, and propane tanks. In addition to determining an empty condition, StreamFi could be used to check the full condition, for example the fill level of rain gauges or other reservoirs. Notification will be done through an application that allows the user to easily determine which sensor is nearing its critical condition. In addition, the sensor will notify the user when the sensor runs low on power. StreamFi could also reduce inventory costs for companies that store large quantities of liquid containers by allowing them to place orders only when exactly needed. </p>
+                                    <p>Learn more about us at our official project website: <a href="https://www.ece.cmu.edu/~ece549/spring17/team10/website/">https://www.ece.cmu.edu/~ece549/spring17/team10/website/</a></p>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div class="col-md-8">
-                        <div class="card">
-                            <div class="header">
-                                <h4 class="title">Container Levels Over Time</h4>
-                                <p class="category">Graph goes here</p>
-                            </div>
-                            <div class="content">
-                                <div class="footer">
-                                    <div class="legend">
-                                        <i class="fa fa-circle text-info"></i> Container 1
-                                        <i class="fa fa-circle text-danger"></i> Container 2
-                                        <i class="fa fa-circle text-warning"></i> Container 3
-                                    </div>
-                                    <hr>
-                                    <div class="stats">
-                                        <i class="fa fa-history"></i> Updated 3 minutes ago
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">More Information</h4>
-                            </div>
-                            <div class="content">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">Container Tracker</h4>
-                                <p class="category">Keeping track of all your containers</p>
-                                <img src="img/mini-keg.jpg" style="max-height:200px;max-width:150px;">
-                            </div>
-                            <div class="content">
-                            </div>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -256,13 +204,13 @@
 
     <!--   Core JS Files   -->
     <script src="js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/bootstrap.min.js" type="text/javascript"></script>
 
-	<!--  Checkbox, Radio & Switch Plugins -->
-	<script src="js/bootstrap-checkbox-radio-switch.js"></script>
+    <!--  Checkbox, Radio & Switch Plugins -->
+    <script src="js/bootstrap-checkbox-radio-switch.js"></script>
 
-	<!--  Charts Plugin -->
-	<script src="js/chartist.min.js"></script>
+    <!--  Charts Plugin -->
+    <script src="js/chartist.min.js"></script>
 
     <!--  Notifications Plugin    -->
     <script src="js/bootstrap-notify.js"></script>
@@ -271,13 +219,13 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
 
     <!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
-	<script src="js/light-bootstrap-dashboard.js"></script>
+    <script src="js/light-bootstrap-dashboard.js"></script>
 
-	<!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
-	<script src="js/demo.js"></script>
+    <!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
+    <script src="js/demo.js"></script>
 
-	<script type="text/javascript">
-    	$(document).ready(function(){
+    <script type="text/javascript">
+        $(document).ready(function(){
             getJSONFile();
         });
 
