--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -61,19 +61,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="/notifications">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="/settings">
                         <i class="fa fa-cog"></i>
                         <p>Settings</p>
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="/sign-out">
                         <i class="fa fa-sign-out"></i>
                         <p>Sign Out</p>
                     </a>
@@ -231,7 +231,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/about-us">
                                 About StreamFi
                             </a>
                         </li>
