--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,6 +27,7 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="css/pe-icon-7-stroke.css" rel="stylesheet" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.min.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -140,10 +141,10 @@
                         <div class="card">
                             <div class="header" style="text-align: center">
                                 <h4 class="title">Container Statistics</h4>
-                                <div id="json-data" style="text-align: center"></div>
                             </div>
                             <div class="content">
                                 <div id="fill-img" style="text-align: center"></div>
+                                <h4 class="title"><div id="json-data" style="text-align: center"></div></h4>
                                 <div class="footer">
                                     <hr>
                                     <div class="stats">
@@ -158,7 +159,7 @@
                         <div class="card">
                             <div class="header" style="text-align: center">
                                 <h4 class="title">Container Levels Over Time</h4>
-                                <p class="category"><img src="/img/prev_fill_level_graph.png" style="max-height: 400px; max-width: 550px;"></p>
+                                <p class="category"><img src="/img/prev_fill_level_graph.png" style="max-height: 350px; max-width: 525px;"></p>
                             </div>
                             <div class="content">
                                 <div class="footer">
@@ -177,31 +178,6 @@
                     </div>
                 </div>
 
-
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">More Information</h4>
-                            </div>
-                            <div class="content">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">Container Tracker</h4>
-                                <p class="category">Keeping track of all your containers</p>
-                                <img src="img/mini-keg.jpg" style="max-height:200px;max-width:150px;">
-                            </div>
-                            <div class="content">
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -217,7 +193,7 @@
                         </li>
                         <li>
                             <a href="/about-us">
-                                About StreamFi
+                               About StreamFi
                             </a>
                         </li>
                         <li>
@@ -298,7 +274,7 @@
                 var fillImg = document.getElementById("fill-img");
                 fillImg.innerHTML += getImageByFillLevel(data.fillLevel);
                 var lastModified = document.getElementById("current-time");
-                lastModified.innerHTML += data.currentTime;
+                lastModified.innerHTML += moment(data.currentTime).format('LLLL');
             });
         }
     </script>
