--- a/views/sign-out.handlebars
+++ b/views/sign-out.handlebars
@@ -29,145 +29,13 @@
     <link href="css/pe-icon-7-stroke.css" rel="stylesheet" />
 
 </head>
-<body>
-
-<div class="wrapper">
+<body data-color="blue" data-image="img/sidebar-5.jpg">
+<!--
+<div class="wrapper" data-color="blue" data-image="img/sidebar-5.jpg">
     <div class="sidebar" data-color="blue" data-image="img/sidebar-5.jpg">
-
-    	<div class="sidebar-wrapper">
-            <div class="logo">
-                <a href="/" class="simple-text">
-                    StreamFi
-                </a>
-            </div>
-
-            <ul class="nav">
-                <li class="active">
-                    <a href="/">
-                        <i class="fa fa-home"></i>
-                        <p>Home</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/containers">
-                        <i class="fa fa-tint"></i>
-                        <p>Containers</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/statistics">
-                        <i class="fa fa-bar-chart"></i>
-                        <p>Statistics</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/notifications">
-                        <i class="pe-7s-bell"></i>
-                        <p>Notifications</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/settings">
-                        <i class="fa fa-cog"></i>
-                        <p>Settings</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/sign-out">
-                        <i class="fa fa-sign-out"></i>
-                        <p>Sign Out</p>
-                    </a>
-                </li>
-            </ul>
-    	</div>
     </div>
-
-    <div class="main-panel">
-        <nav class="navbar navbar-default navbar-fixed">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Containers</a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-left">
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fa fa-globe"></i>
-                                    <b class="caret"></b>
-                                    <span class="notification">4</span>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Keg Fill Level at 25%! (2 min ago)</a></li>
-                                <li><a href="#">Keg Fill Level at 50%! (2 hr ago)</a></li>
-                                <li><a href="#">Keg Fill Level at 75%! (3 hr ago)</a></li>
-                                <li><a href="#">Keg Fill Level at 100%! (4 hr ago)</a></li>
-                              </ul>
-                        </li>
-                        <li>
-                           <a href="">
-                                <i class="fa fa-search"></i>
-                            </a>
-                        </li>
-                    </ul>
-
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                           <a href="">
-                               Account
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    Dropdown
-                                    <b class="caret"></b>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                              </ul>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Log out
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-
-        <div class="content">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="card">
-                                <div class="header">
-                                    <h4 class="title">Settings</h4>
-                                </div>
-                                <div class="content">
-
-
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
+</div>
+-->
 
         <footer class="footer">
             <div class="container-fluid">
@@ -195,9 +63,6 @@
                 </p>
             </div>
         </footer>
-
-    </div>
-</div>
 
 
 </body>
