Finalized containers page and made initial edits to notifications page

--- a/views/containers.handlebars
+++ b/views/containers.handlebars
@@ -127,27 +127,26 @@
             </div>
         </nav>
 
-
         <div class="content">
             <div class="container-fluid">
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">More Information</h4>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="header" style="text-align: center">
+                                <h4 class="title">Container 1</h4>
+                                <p class="category">Mini Keg: 5 Liter Capacity</p>
+                                <img src="img/mini-keg.jpg" style="max-height:200px;max-width:150px;">
                             </div>
                             <div class="content">
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">Container Tracker</h4>
-                                <p class="category">Keeping track of all your containers</p>
-                                <img src="img/mini-keg.jpg" style="max-height:200px;max-width:150px;">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="header" style="text-align: center">
+                                <h4 class="title">Container 2</h4>
+                                <p class="category">Metal Water Bottle: 1 Liter Capacity</p>
+                                <img src="img/metal-water-bottle.png" style="height:200px;width:150px;">
                             </div>
                             <div class="content">
                             </div>
