--- a/views/notifications.handlebars
+++ b/views/notifications.handlebars
@@ -92,7 +92,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Containers</a>
+                    <a class="navbar-brand" href="#">Notifications</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
@@ -147,77 +147,26 @@
             </div>
         </nav>
 
-
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-12">
                         <div class="card">
-                            <div class="header">
-                                <h4 class="title">Container Statistics</h4>
-                                <p class="category">Last Measurement</p>
+                            <div class="header" style="text-align: center">
+                                <h4 class="title">Notifications</h4>
                             </div>
-                            <div class="content">
-                            	<div id="json-data"></div>
-                                <div class="footer">
-                                    <hr>
-                                    <div class="stats">
-                                        <i class="fa fa-clock-o"></i>Last measurement: <div id="current-time"></div> 
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                            <div class="content table-responsive table-full-width">
+                                <table class="table table-hover table-striped" id="notifications">
+                                    <tbody>
+                                    </tbody>
+                                </table>
 
-                    <div class="col-md-8">
-                        <div class="card">
-                            <div class="header">
-                                <h4 class="title">Container Levels Over Time</h4>
-                                <p class="category">Graph goes here</p>
-                            </div>
-                            <div class="content">
-                                <div class="footer">
-                                    <div class="legend">
-                                        <i class="fa fa-circle text-info"></i> Container 1
-                                        <i class="fa fa-circle text-danger"></i> Container 2
-                                        <i class="fa fa-circle text-warning"></i> Container 3
-                                    </div>
-                                    <hr>
-                                    <div class="stats">
-                                        <i class="fa fa-history"></i> Updated 3 minutes ago
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">More Information</h4>
-                            </div>
-                            <div class="content">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6">
-                        <div class="card ">
-                            <div class="header">
-                                <h4 class="title">Container Tracker</h4>
-                                <p class="category">Keeping track of all your containers</p>
-                                <img src="img/mini-keg.jpg" style="max-height:200px;max-width:150px;">
-                            </div>
-                            <div class="content">
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
         </div>
 
 
@@ -278,23 +227,15 @@
 
 	<script type="text/javascript">
     	$(document).ready(function(){
-            getJSONFile();
+            var table = document.getElementById("notifications");
+            var length = table.getElementsByTagName("tr").length;
+            var row = table.insertRow(length);
+            var cell1 = row.insertCell(0);
+            var cell2 = row.insertCell(1);
+            var cell3 = row.insertCell(2);
+            cell1.innerHTML = "<td>hi</td>";
+            cell2.innerHTML = "there";
         });
-
-               function findValues() {
-           var myList;
-           $.getJSON('/json/currentFill.json').done(function (data) {
-               myList = data;
-               var jsonData = document.getElementById("json-data");
-               jsonData.innerHTML += "Container ID = ";
-               jsonData.innerHTML += data.containerID;
-               jsonData.innerHTML += "<br>";
-               jsonData.innerHTML += "Fill Level =";
-               jsonData.innerHTML += data.fillLevel;
-               jsonData.innerHTML += "<br>";
-               console.log(data);
-           });
-       }
 
         function getJSONFile() {
             var myList;
