--- a/views/notifications.handlebars
+++ b/views/notifications.handlebars
@@ -25,7 +25,6 @@
 
     <!--     Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
     <link href="css/pe-icon-7-stroke.css" rel="stylesheet" />
 
 </head>
@@ -229,13 +228,34 @@
     	$(document).ready(function(){
             var table = document.getElementById("notifications");
             var length = table.getElementsByTagName("tr").length;
+            readTextFile("/json/allPrevFills");
             var row = table.insertRow(length);
             var cell1 = row.insertCell(0);
             var cell2 = row.insertCell(1);
             var cell3 = row.insertCell(2);
             cell1.innerHTML = "<td>hi</td>";
             cell2.innerHTML = "there";
+            cell3.innerHTML = lastModified;
         });
+
+        function readTextFile(file)
+        {
+            var rawFile = new XMLHttpRequest();
+            rawFile.open("GET", file, false);
+            rawFile.onreadystatechange = function ()
+            {
+                if(rawFile.readyState === 4)
+                {
+                    if(rawFile.status === 200 || rawFile.status == 0)
+                    {
+                        var allText = rawFile.responseText;
+                        var array = allText.split(",")
+                        alert(allText);
+                    }
+                }
+            }
+            rawFile.send(null);
+        }
 
         function getJSONFile() {
             var myList;
@@ -248,8 +268,8 @@
                 jsonData.innerHTML += "Fill Level = ";
                 jsonData.innerHTML += data.fillLevel;
                 jsonData.innerHTML += "<br>";
-                var lastModified = document.getElementById("current-time");
-                lastModified.innerHTML += data.currentTime;
+                //var lastModified = document.getElementById("current-time");
+                //lastModified.innerHTML += data.currentTime;
             });
 
         }
