Implemented notification parsing on notifications page

--- a/views/containers.handlebars
+++ b/views/containers.handlebars
@@ -67,12 +67,6 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/settings">
-                        <i class="fa fa-cog"></i>
-                        <p>Settings</p>
-                    </a>
-                </li>
-                <li>
                     <a href="/sign-out">
                         <i class="fa fa-sign-out"></i>
                         <p>Sign Out</p>
@@ -118,7 +112,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a href="/sign-out">
                                 Log out
                             </a>
                         </li>
