--- a/views/notifications.handlebars
+++ b/views/notifications.handlebars
@@ -41,7 +41,7 @@
             </div>
 
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="/">
                         <i class="fa fa-home"></i>
                         <p>Home</p>
@@ -60,15 +60,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/notifications">
+                    <a href="/notifications" class="active">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/settings">
-                        <i class="fa fa-cog"></i>
-                        <p>Settings</p>
                     </a>
                 </li>
                 <li>
@@ -108,11 +102,6 @@
                                 <li><a href="#">Keg Fill Level at 100%! (4 hr ago)</a></li>
                               </ul>
                         </li>
-                        <li>
-                           <a href="">
-                                <i class="fa fa-search"></i>
-                            </a>
-                        </li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -121,23 +110,8 @@
                                Account
                             </a>
                         </li>
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    Dropdown
-                                    <b class="caret"></b>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                              </ul>
-                        </li>
                         <li>
-                            <a href="#">
+                            <a href="/sign-out">
                                 Log out
                             </a>
                         </li>
@@ -156,6 +130,11 @@
                             </div>
                             <div class="content table-responsive table-full-width">
                                 <table class="table table-hover table-striped" id="notifications">
+                                    <thead>
+                                        <th>Container ID</th>
+                                        <th>Fill Level</th>
+                                        <th>Time of Update</th>
+                                    </thead>
                                     <tbody>
                                     </tbody>
                                 </table>
@@ -226,18 +205,9 @@
 
 	<script type="text/javascript">
     	$(document).ready(function(){
-            var table = document.getElementById("notifications");
-            var length = table.getElementsByTagName("tr").length;
-            readTextFile("/json/allPrevFills");
-            var row = table.insertRow(length);
-            var cell1 = row.insertCell(0);
-            var cell2 = row.insertCell(1);
-            var cell3 = row.insertCell(2);
-            cell1.innerHTML = "<td>hi</td>";
-            cell2.innerHTML = "there";
-            cell3.innerHTML = lastModified;
+            getJSONFile();
         });
-
+/*
         function readTextFile(file)
         {
             var rawFile = new XMLHttpRequest();
@@ -250,24 +220,28 @@
                     {
                         var allText = rawFile.responseText;
                         var array = allText.split(",")
-                        alert(allText);
+                        //alert(allText);
                     }
                 }
             }
             rawFile.send(null);
         }
-
+*/
         function getJSONFile() {
             var myList;
-            $.getJSON('/json/currentFill.json').done(function (data) {
+            $.getJSON('/json/exampleJSON.json').done(function (data) {
                 myList = data;
-                var jsonData = document.getElementById("json-data");
-                jsonData.innerHTML += "Container ID = ";
-                jsonData.innerHTML += data.containerID;
-                jsonData.innerHTML += "<br>";
-                jsonData.innerHTML += "Fill Level = ";
-                jsonData.innerHTML += data.fillLevel;
-                jsonData.innerHTML += "<br>";
+                var table = document.getElementById("notifications");
+                for (i=0; i<data.containerID.length; i++) {
+                    var length = table.getElementsByTagName("tr").length;
+                    var row = table.insertRow(length);
+                    var cell1 = row.insertCell(0);
+                    var cell2 = row.insertCell(1);
+                    var cell3 = row.insertCell(2);
+                    cell1.innerHTML = data.containerID[i].toString();
+                    cell2.innerHTML = data.fillLevel[i].toString();
+                    cell3.innerHTML = data.currentTime[i].toString();                    
+                }
                 //var lastModified = document.getElementById("current-time");
                 //lastModified.innerHTML += data.currentTime;
             });
