--- a/views/statistics.handlebars
+++ b/views/statistics.handlebars
@@ -42,7 +42,7 @@
             </div>
 
             <ul class="nav">
-                <li class="active">
+                <li>
                     <a href="/">
                         <i class="fa fa-home"></i>
                         <p>Home</p>
@@ -54,7 +54,7 @@
                         <p>Containers</p>
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="/statistics">
                         <i class="fa fa-bar-chart"></i>
                         <p>Statistics</p>
@@ -64,12 +64,6 @@
                     <a href="/notifications">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/settings">
-                        <i class="fa fa-cog"></i>
-                        <p>Settings</p>
                     </a>
                 </li>
                 <li>
@@ -109,11 +103,6 @@
                                 <li><a href="#">Keg Fill Level at 100%! (4 hr ago)</a></li>
                               </ul>
                         </li>
-                        <li>
-                           <a href="">
-                                <i class="fa fa-search"></i>
-                            </a>
-                        </li>
                     </ul>
 
                     <ul class="nav navbar-nav navbar-right">
@@ -122,23 +111,8 @@
                                Account
                             </a>
                         </li>
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    Dropdown
-                                    <b class="caret"></b>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                              </ul>
-                        </li>
                         <li>
-                            <a href="#">
+                            <a href="/sign-out">
                                 Log out
                             </a>
                         </li>
