--- a/views/about-us.handlebars
+++ b/views/about-us.handlebars
@@ -55,21 +55,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/statistics">
-                        <i class="fa fa-bar-chart"></i>
-                        <p>Statistics</p>
-                    </a>
-                </li>
-                <li>
                     <a href="/notifications">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="/settings">
-                        <i class="fa fa-cog"></i>
-                        <p>Settings</p>
                     </a>
                 </li>
                 <li>
@@ -92,53 +80,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Containers</a>
+                    <a class="navbar-brand" href="#">About StreamFi</a>
                 </div>
                 <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-left">
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fa fa-globe"></i>
-                                    <b class="caret"></b>
-                                    <span class="notification">4</span>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Keg Fill Level at 25%! (2 min ago)</a></li>
-                                <li><a href="#">Keg Fill Level at 50%! (2 hr ago)</a></li>
-                                <li><a href="#">Keg Fill Level at 75%! (3 hr ago)</a></li>
-                                <li><a href="#">Keg Fill Level at 100%! (4 hr ago)</a></li>
-                              </ul>
-                        </li>
-                        <li>
-                           <a href="">
-                                <i class="fa fa-search"></i>
-                            </a>
-                        </li>
-                    </ul>
 
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                           <a href="">
-                               Account
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    Dropdown
-                                    <b class="caret"></b>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                              </ul>
-                        </li>
-                        <li>
-                            <a href="#">
+                            <a href="/sign-out">
                                 Log out
                             </a>
                         </li>
